--- a/code/css/popup.scss
+++ b/code/css/popup.scss
@@ -1,5 +1,5 @@
-@import "mixins";
-@import "fonts/style";
+@import 'mixins';
+@import 'fonts/style';
 
 * {
 	-webkit-box-sizing: border-box;
@@ -36,7 +36,7 @@ body {
 		height: 70px;
 		margin: 0 15px;
 		background-color: #ff305e;
-		background-image: url(../../img/logo.png);
+		background-image: url('../../img/logo.png');
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: 80%;
