--- a/code/css/options.scss
+++ b/code/css/options.scss
@@ -1,12 +1,6 @@
 @import 'mixins';
 
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-
-	padding: 0; margin: 0;
-}
+@include reset;
 
 body {
 	background-color: #f1f1f1;
