--- a/code/css/popup.scss
+++ b/code/css/popup.scss
@@ -1,13 +1,7 @@
 @import 'mixins';
 @import 'fonts/style';
 
-* {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-
-	padding: 0; margin: 0;
-}
+@include reset;
 
 $primecolor: #ff305e;
 
