--- a/code/css/popup.scss
+++ b/code/css/popup.scss
@@ -29,7 +29,7 @@ body {
 		width: 70px;
 		height: 70px;
 		margin: 0 15px;
-		background-color: #ff305e;
+		background-color: $primecolor;
 		background-image: url('../../img/logo.png');
 		background-position: center center;
 		background-repeat: no-repeat;
