--- a/code/css/options.scss
+++ b/code/css/options.scss
@@ -1,4 +1,6 @@
-@import 'src/mixins';
+@import
+	'src/vars',
+	'src/mixins';
 
 @include reset;
 
@@ -6,6 +8,12 @@ body {
 	background-color: #f1f1f1;
 	margin: 5px;
 	font-size: 16px;
+	overflow: hidden;
+}
+
+html.opera {
+	@at-root body, & { width: 100%; height: 100%; }
+	body { @include flexbox(auto, center, center, auto); }
 }
 
 table {
@@ -32,7 +40,7 @@ input {
 	}
 }
 
-#save {
+.save {
 	margin: 5px;
 	padding: 2px 4px;
 
