--- a/code/source/scss/fonts/_variables.scss
+++ b/code/source/scss/fonts/_variables.scss
@@ -1,8 +1,7 @@
-$icomoon-font-path: 'fonts' !default;
+$icomoon-font-path: '../fonts' !default;
 
 $icon-vk: '\e900';
 $icon-gear: '\e901';
 $icon-pause: '\e902';
 $icon-play: '\e903';
 $icon-home: '\e904';
-
