--- a/source/scss/options.scss
+++ b/source/scss/options.scss
@@ -1,6 +1,5 @@
-@import
-	'src/vars',
-	'src/mixins';
+@import 'inc/vars';
+@import 'inc/mixins';
 
 @include reset;
 
@@ -30,7 +29,7 @@ table {
 
 input {
 	@at-root select, & {
-		margin-left: 10px;
+		margin: 0 5px 0 10px;
 		padding: 2px;
 		width: 70px;
 	}
