--- a/source/pug/inc/head.pug
+++ b/source/pug/inc/head.pug
@@ -1,4 +1,4 @@
 include vars.pug
 
 meta(charset='UTF-8')
-meta(name='viewport' content='width=device-width, initial-scale=1.0')
+meta(name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no')
