--- a/source/scss/inc/_popup__player.scss
+++ b/source/scss/inc/_popup__player.scss
@@ -11,14 +11,14 @@
 
 		width: 1em;
 		font-size: 25px;
-		color: $primeColor;
+		color: var(--prime-color);
 		border: 0;
 
 		cursor: pointer;
 		@include transition(.3s);
 
 		&:hover {
-			color: darken($primeColor, 15%);
+			color: var(--prime-color-15d);
 		}
 	}
 
@@ -30,9 +30,9 @@
 
 		&::-webkit-slider-runnable-track {
 			height: 13px;
-			background: linear-gradient(to right, $primeColor 0%, $primeColor var(--volume), transparent var(--volume), transparent 100%);
+			background: linear-gradient(to right, var(--prime-color) 0%, var(--prime-color) var(--volume), transparent var(--volume), transparent 100%);
 			margin: 6px 0 8px 0;
-			border: 3px solid darken($primeColor, 5%);
+			border: 3px solid var(--prime-color-5d);
 			border-radius: 9px;
 			vertical-align: middle;
 			cursor: pointer;
@@ -43,7 +43,7 @@
 
 			-webkit-appearance: none;
 			width: $track-size; height: $track-size;
-			background-color: darken($primeColor, 5%);
+			background-color: var(--prime-color-5d);
 			margin-top: -8px;
 			border-radius: 99px;
 			cursor: pointer;
@@ -51,11 +51,11 @@
 			@include transition(.3s);
 
 			&:hover {
-				background-color: darken($primeColor, 10%);
+				background-color: var(--prime-color-10d);
 			}
 
 			&:active {
-				background-color: darken($primeColor, 15%);
+				background-color: var(--prime-color-15d);
 			}
 		}
 	}
