--- a/source/scss/inc/_popup__tabs.scss
+++ b/source/scss/inc/_popup__tabs.scss
@@ -10,25 +10,37 @@
 			display: inline-block;
 			list-style: none;
 			height: 100%;
-			padding: 8px 10px;
-			text-transform: uppercase;
-			font-size: 18px;
-			color: #fff;
 
-			@include transition(.5s);
-			@include user-select(none);
-			cursor: pointer;
+			button {
+				@include flexbox(auto, center, center, auto);
+				width: 100%; height: 100%;
+				background-color: transparent;
+				padding: 0 10px;
+				text-transform: uppercase;
+				font-size: 18px;
+				color: #fff;
+				border: 0;
+				outline: 0;
 
-			&.active {
-				background-color: rgba(0, 0, 0, .3);
+				@include transition(.5s);
+				@include user-select(none);
+				cursor: pointer;
+
+				&.active {
+					background-color: rgba(0, 0, 0, .3);
+
+					&:hover {
+						background-color: rgba(0, 0, 0, .3);
+					}
+				}
+
+				&:focus {
+					background-color: rgba(0, 0, 0, .2);
+				}
 
 				&:hover {
-					background-color: rgba(0, 0, 0, .3);
+					background-color: rgba(0, 0, 0, .1);
 				}
-			}
-
-			&:hover {
-				background-color: rgba(0, 0, 0, .1);
 			}
 		}
 	}
