--- a/source/scss/options.scss
+++ b/source/scss/options.scss
@@ -12,7 +12,7 @@ body {
 
 html.opera {
 	@at-root body, & { width: 100%; height: 100%; }
-	body { @include flexbox(column, center, center, auto); }
+	body { @include flexbox(column, center, center, auto) }
 }
 
 table {
@@ -24,6 +24,11 @@ table {
 		&:first-child {
 			text-align: right;
 		}
+	}
+
+	tr.title td {
+		text-align: center;
+		font-weight: 500;
 	}
 }
 
@@ -40,8 +45,13 @@ input {
 }
 
 .save {
-	margin: 5px;
-	padding: 2px 4px;
+	text-align: center;
+	margin-top: 5px;
+
+	button {
+		margin: 5px;
+		padding: 2px 4px;
+	}
 
 	&Msg {
 		display: none;
