--- a/source/pug/inc/vars.pug
+++ b/source/pug/inc/vars.pug
@@ -1,3 +1,2 @@
-- var title = 'Asian Wave'
-- var version = '0.5.3'
-- var host = 'asianwave.ru'
+- const TITLE = 'Asian Wave'
+- const HOST = 'asianwave.ru'
