--- a/source/pug/inc/head.pug
+++ b/source/pug/inc/head.pug
@@ -2,3 +2,5 @@ include vars.pug
 
 meta(charset='UTF-8')
 meta(name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no')
+
+link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic')
