--- a/source/pug/popup.pug
+++ b/source/pug/popup.pug
@@ -2,9 +2,9 @@ doctype html
 html
 	head
 		include inc/head.pug
-		title #{title}
-		link(rel='stylesheet' href=`code/css/popup.min.css?v=${version}`)
-		link(rel='stylesheet' href=`https://${host}/files/css/chrome-app-events.min.css?v=${version}`)
+		title #{TITLE}
+		link(rel='stylesheet' href=`code/css/popup.min.css?v=${VERSION}`)
+		link(rel='stylesheet' href=`https://${HOST}/files/css/chrome-app-events.min.css?v=${VERSION}`)
 	body
 		div.container
 			header.top-panel
@@ -17,7 +17,7 @@ html
 					button.options(href='javascript:void(0)' data-tr-title='options') #[i.icon.icon-gear]
 			main
 				div.links
-					a(href=`https://${host}?from=chrome-${version}` target='_blank' data-tr-title='awSite') #[i.icon.icon-home]
+					a(href=`https://${HOST}?from=chrome-${VERSION}` target='_blank' data-tr-title='awSite') #[i.icon.icon-home]
 					a(href='https://vk.com/public120842574' target='_blank' rel='nofollow noopener' data-tr-title='awVKPage') #[i.icon.icon-vk]
 				div.content
 					div.player
@@ -32,5 +32,5 @@ html
 							div.section.nextBroadcast
 
 		each JS in ['kamina', 'every', 'main', 'popup']
-			script(src=`code/js/${JS}.min.js?v=${version}` defer)
+			script(src=`code/js/${JS}.min.js?v=${VERSION}` defer)
 					
