--- a/source/scss/inc/_popup__top-panel.scss
+++ b/source/scss/inc/_popup__top-panel.scss
@@ -11,7 +11,7 @@
 		width: 70px; height: 70px;
 		margin: 0 15px;
 		background-color: var(--prime-color);
-		background-image: url('/img/logo.png');
+		background-image: url('/img/logo.png?v=#{$VERSION}');
 		background-position: center center;
 		background-repeat: no-repeat;
 		background-size: 60%;
