--- a/source/pug/popup.pug
+++ b/source/pug/popup.pug
@@ -17,7 +17,7 @@ html
 					button.options(href='javascript:void(0)' data-tr-title='options') #[i.icon.icon-gear]
 			main
 				div.links
-					a(href=`https://${HOST}?from=chrome-${VERSION}` target='_blank' data-tr-title='awSite') #[i.icon.icon-home]
+					a(href=`https://${HOST}` target='_blank' data-tr-title='awSite') #[i.icon.icon-home]
 					a(href='https://vk.com/public120842574' target='_blank' rel='nofollow noopener' data-tr-title='awVKPage') #[i.icon.icon-vk]
 				div.content
 					div.player
