--- a/source/pug/popup.pug
+++ b/source/pug/popup.pug
@@ -5,7 +5,8 @@ html
 		title #{TITLE}
 
 		link(rel='stylesheet' href=`code/css/popup.min.css?v=${VERSION}`)
-		link(rel='stylesheet' href=`https://${HOST}/files/css/chrome-app-events.min.css?v=${VERSION}`)
+
+		link(rel='preload' as='style' href=`https://${HOST}/assets/css/chrome-app-events.min.css?v=${VERSION}` onload='this.rel="stylesheet"')
 
 	body
 		div.container
