--- a/source/pug/popup.pug
+++ b/source/pug/popup.pug
@@ -6,7 +6,7 @@ html
 
 		link(rel='stylesheet' href=`code/css/popup.min.css?v=${VERSION}`)
 
-		link(rel='preload' as='style' href=`https://${HOST}/assets/css/chrome-app-events.min.css?v=${VERSION}` onload='this.rel="stylesheet"')
+		link(rel='stylesheet' href=`https://${HOST}/assets/css/chrome-app-events.min.css?v=${VERSION}`)
 
 	body
 		div.container
